gateway/manifests/mongodb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
  labels:
    name: mongo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongo-db
  template:
    metadata:
      labels:
        service: mongo-db
    spec:
      containers:
        - image: mongo:latest
          imagePullPolicy: Always
          name: mongo-db
          volumeMounts:
            - mountPath: /var/lib/mongodb/data
              name: mongo-volume-mount
      volumes:
        - name: mongo-volume-mount
          persistentVolumeClaim:
            claimName: mongo-db-pvc
