gateway/manifests/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP # will have internal IP address only available within cluster
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
